tests/ui/nll/guarantor-issue-46974.stderr
error[E0506]: cannot assign to `*s` because it is borrowed
  --> $DIR/guarantor-issue-46974.rs:7:5
   |
LL |     let t = &mut *s; // this borrow should last for the entire function
   |             ------- `*s` is borrowed here
LL |     let x = &t.0;
LL |     *s = (2,);
   |     ^^^^^^^^^ `*s` is assigned to here but it was already borrowed
LL |     *x
   |     -- borrow later used here

error: lifetime may not live long enough
  --> $DIR/guarantor-issue-46974.rs:12:5
   |
LL | fn bar(s: &Box<(i32,)>) -> &'static i32 {
   |           - let's call the lifetime of this reference `'1`
LL |     &s.0
   |     ^^^^ returning this value requires that `'1` must outlive `'static`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0506`.
